Added Java 17 workaround (untested) and some refinements